# Heinrich-The-Inventing-Machine

./: .env.example  .env.mcp.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  ARCHITECTURE_VISION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOCKDOWN.md  LICENSE  PROJECT_REVIEW.md  PROJECT_STRUCTURE.md  README-RU.md  README-ZH.md  README.md  RESULTS.md  REVIEW_SUMMARY.md  ROADMAP.md  SECURITY.md  TODO-RU.md  TODO.md  antigravity.md  chart_script.py  deepseekreport.md  docker-compose.mcp.yml  heinrich_cli.py  main-prompt.md  problem_parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  script.py  script_1.py  setup.py
.github/workflows/: ci.yml  i18n-sync.yml
docs/: credits.csv  index.html  mcp-integration.md  mcp-quick-start.md
docs/ar/: README.md  api-reference.md  architecture.md  installation.md  triz-basics.md
docs/en/: README.md  api-reference.md  architecture.md  installation.md  triz-basics.md
docs/ru/: README.md  api-reference.md  architecture.md  installation.md  triz-basics.md
docs/zh/: README.md  api-reference.md  architecture.md  installation.md  triz-basics.md
examples/: README.md  basic_usage.py  gemini_usage.py
heinrich/: __init__.py  version.py
heinrich/agents/: __init__.py  persona_manager.py
heinrich/knowledge/: 40_principles.yaml  __init__.py  contradiction_matrix.csv  effects_database.json  knowledge_loader.py
heinrich/llm/: __init__.py  base_adapter.py
heinrich/llm/adapters/: __init__.py  gemini.py  ollama.py
heinrich/llm/prompts/step_prompts/: contradiction_identification.txt  principle_selection.txt  problem_parsing.txt
heinrich/llm/prompts/system_prompts/: heinrich_persona.txt
heinrich/pipelines/: __init__.py  adaptation_planner.py  concept_generator.py  contradiction_identifier.py  effects_lookup.py  principle_selector.py  report_builder.py
heinrich/utils/: __init__.py  config_loader.py  logging_config.py
heinrich_triz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
i18n/: README.md  crowdin-config.yaml  glossary_ar.yaml  glossary_en.yaml  glossary_ru.yaml  glossary_zh.yaml  sync_translations.py
i18n/templates/: README_template.md  docs_template.md  help_template.md
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/multilingual/: conftest.py  test_arabic_support.py  test_chinese_support.py  test_russian_support.py  test_terminology_consistency.py
tests/unit/test_agents/: test_persona_manager.py
tests/unit/test_knowledge/: test_knowledge_loader.py
tests/unit/test_llm/: test_adapters.py  test_gemini_adapter.py
tests/unit/test_pipelines/: test_problem_parser.py
